# infnum

./: .cursorrules  @main.tex  AGENTS.md  CHANGELOG.md  Justfile  README.md  infnum.code-workspace  pyproject.toml
.cursor/rules/: kernel-benchmarking.mdc
benchmarks/: benchmark_lc.py  discontinuous.py  micro_bench.py  nn_benchmark_lc.py  profile_sparse_lc.py
examples/: discontinuous.py
src/infnum/: .cursorrules  __init__.py  config.py  torch_autograd.py  torch_backend.py  torch_nonstd.py  torch_scalar.py  torch_sparse.py
tests/: test_additional.py  test_autograd.py  test_benchmark_micro.py  test_nonstd_grad.py  test_performance.py  test_smooth.py  test_sparse.py  test_sparse_lc.py  test_step_function.py  test_torch_division.py
