[project]
name = "infnum"
version = "0.3.0"
description = "Infinite and infinitesimal numbers for PyTorch"
authors = [{ name = "Alok Singh", email = "alokbeniwal@gmail.com" }]
dependencies = [
    "torch>=2.2.0; platform_system!='Windows'", # CPU-only build is fine for our purposes
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["hypothesis>=6.118.7", "pytest>=8.3.3", "pudb>=2024.1.3"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/infnum"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ty>=0.0.0a8"]
